<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="search_screen">Открыт экран поиск</string>
    <string name="media">Медиатека</string>
    <string name="media_screen">Открыт экран Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="eula">Пользовательское соглашение</string>
    <string name="share_url">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_email">chozehype@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="eula_url">https://yandex.ru/legal/practicum_offer/</string>
</resources>