<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingRight="@dimen/horizontal_padding"
    android:paddingLeft="@dimen/horizontal_padding"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_back"
            android:layout_marginEnd="16dp"
            android:layout_gravity="start"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/basic_text_background_dark"
            android:textSize="@dimen/title_size"
            android:layout_marginTop="12dp"
            android:layout_gravity="start"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingVertical="20dp"
        android:text="@string/dark_mode"
        android:textColor="@color/basic_text_background_dark"
        android:textSize="16sp"
        android:thumbTintMode="screen" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/settings_padding"
        android:paddingBottom="@dimen/settings_padding"
        android:text="@string/share_app"
        android:textColor="@color/basic_text_background_dark"
        android:textSize="@dimen/settings_text_size"
        android:drawableEnd="@drawable/share"
        android:gravity="start|center_vertical" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/settings_padding"
        android:paddingBottom="@dimen/settings_padding"
        android:text="@string/support"
        android:textColor="@color/basic_text_background_dark"
        android:textSize="@dimen/settings_text_size"
        android:drawableEnd="@drawable/support"
        android:gravity="start|center_vertical" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/settings_padding"
        android:paddingBottom="@dimen/settings_padding"
        android:text="@string/eula"
        android:textColor="@color/basic_text_background_dark"
        android:textSize="@dimen/settings_text_size"
        android:drawableEnd="@drawable/arrow_eula"
        android:gravity="start|center_vertical" />

</LinearLayout>
